WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12581
XPath //title shouldn't match <title> in XHTML
https://bugs.webkit.org/show_bug.cgi?id=12581
Summary
XPath //title shouldn't match <title> in XHTML
Alexey Proskuryakov
Reported
2007-02-04 05:27:51 PST
Try the first test from the bug URL - Firefox and Opera both don't match anything, while WebKit matches one element.
Attachments
proposed fix
(3.50 KB, patch)
2007-02-04 08:12 PST
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
alternative fix
(4.32 KB, patch)
2007-02-11 01:03 PST
,
Alexey Proskuryakov
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2007-02-04 08:12:36 PST
Created
attachment 12919
[details]
proposed fix This fixes the bug, but cannot be landed until
bug 12583
is fixed (otherwise, two other tests break). I hope this won't take long, so submitting for review anyway.
Darin Adler
Comment 2
2007-02-04 18:04:49 PST
Comment on
attachment 12919
[details]
proposed fix r=me
Alexey Proskuryakov
Comment 3
2007-02-11 01:03:54 PST
Created
attachment 13115
[details]
alternative fix A fix that special-cases HTML documents, as discussed with Hyatt on IRC.
Dave Hyatt
Comment 4
2007-02-11 01:06:57 PST
Comment on
attachment 13115
[details]
alternative fix Also check for node->isHTMLElement(), sincei n the future we may end up letting XML elements be in HTML docs by various means (e.g., XBL).
Alexey Proskuryakov
Comment 5
2007-02-11 01:16:01 PST
Committed revision 19564.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug