        Reviewed by Hyatt.

http://bugs.webkit.org/show_bug.cgi?id=12581
        XPath //title shouldn't match <title> in XHTML

        Test: fast/xpath/ensure-null-namespace.xhtml

        * xml/XPathStep.cpp:
        (WebCore::XPath::Step::nodeTestMatches): Only let a null namespace match any for HTML.



git-svn-id: svn://svn.chromium.org/blink/trunk@19564 bbb929c8-8fbe-4397-9dbb-9b2b20218538