third_party/WebKit/WebCore/xml/XPathStep.cpp
@@ -30,6 +30,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #ifdef XPATH_SUPPORT
 
+#include "Document.h"
 #include "NamedAttrMap.h"
 #include "XPathNSResolver.h"
 #include "XPathParser.h"
@@ -240,9 +241,10 @@ NodeVector Step::nodeTestMatches(const NodeVector& nodes) const
 
                 // We use tagQName here because we don't want the element name in uppercase 
                 // like we get with HTML elements.
-                if (node->nodeType() == Node::ELEMENT_NODE &&
-                    static_cast<Element*>(node)->tagQName().localName() == m_nodeTest &&
-                    (m_namespaceURI.isNull() || m_namespaceURI == node->namespaceURI()))
+                // Paths without namespaces should match HTML elements in HTML documents despite those having an XHTML namespace.
+                if (node->nodeType() == Node::ELEMENT_NODE
+                    && static_cast<Element*>(node)->tagQName().localName() == m_nodeTest
+                    && ((node->isHTMLElement() && node->document()->isHTMLDocument() && m_namespaceURI.isNull()) || m_namespaceURI == node->namespaceURI()))
                     matches.append(node);
             }
 
